--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@types/react-dom": "16.8.2",
     "@types/react-redux": "^7.0.3",
     "@types/styled-components": "^4.1.12",
+    "axios": "^0.18.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.4.0",
     "styled-components": "^4.1.3",
     "typescript": "3.3.3333"
   },
